fix: fixed card width + cards center alignment

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: 360px;
+  width: 300px;
   display: flex;
   flex-flow: column;
   align-items: center;
