--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,8 @@
 .cards {
-  margin: 0;
   padding: 0;
   list-style-type: none;
   display: flex;
   flex-flow: row wrap;
+  max-width: 900px;
+  margin: 0 auto;
 }
